Se actualizaron las páginas y se acabo el diseño de cada una

--- a/productos.html
+++ b/productos.html
@@ -2,62 +2,199 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio</title>
-  <link rel="stylesheet" href="./css/main.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link rel="icon" href="./assets/maDi.jpg">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-    rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="icon" href="./assets/maDi.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
 
 </head>
 
 <body id="bdy">
-  <header>
-  <nav class="navbar navbar-expand-lg ">
-    <div class="container-fluid">
-      <a class="navbar-brand navBarItem" href="./index.html">Pasteleria MaDi</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item navBarItem">
-            <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
-          </li>
-          <li class="nav-item navBarItem">
-            <a class="nav-link " href="./contacto.html">Contacto</a>
-          </li>
-          <li class="nav-item navBarItem">
-            <a class="nav-link" href="./carrito.html">Carrito</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  </header>
-  <main class="container">
+    <header>
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid">
+                <a class="navbar-brand navBarItem" href="./index.html">Pasteleria MaDi</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item navBarItem">
+                            <a class="nav-link" aria-current="page" href="./productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item navBarItem">
+                            <a class="nav-link " href="./contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item navBarItem">
+                            <a class="nav-link" href="./carrito.html">Carrito</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="container">
+       <div class="container my-5">
+    <h2 class="text-center mb-4">Todos los productos</h2>
 
-    
-  </main>
- <!-- footer -->
+    <div class="row">
+
+        <div class="col-md-3">
+
+            <div class="card mb-4">
+                <img src="./assets/tarta_frutas.jpg" class="card-img-top" alt="tarta de frutas">
+                <div class="card-body">
+                    <h5 class="card-title">Tarta de frutas</h5>
+                    <p class="card-text">Rica tarta de frutas disponible en tamaño mediano y grande</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+
+            <div class="card mb-4">
+                <img src="./assets/pan_masa_madre.jpg" class="card-img-top" alt="pan masa madre">
+                <div class="card-body">
+                    <h5 class="card-title">Pan masa madre</h5>
+                    <p class="card-text">Rico pan casero con masa madre</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+
+            <div class="card mb-4">
+                <img src="./assets/galletas_cafe.jpg" class="card-img-top" alt="Galletas café">
+                <div class="card-body">
+                    <h5 class="card-title">Galletas de café</h5>
+                    <p class="card-text">Deliciosas galletas de sabor café, son muy suaves.</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="card mb-4">
+                <img src="./assets/empanadas.jpg" class="card-img-top" alt="Empanadas">
+                <div class="card-body">
+                    <h5 class="card-title">Empanadas</h5>
+                    <p class="card-text">Empanadas de masa hojaldre, el relleno es de su preferencia</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+
+            <div class="card mb-4">
+                <img src="./assets/pastel_duraznos.jpg" class="card-img-top" alt="Cheescake de durazno">
+                <div class="card-body">
+                    <h5 class="card-title">Cheescake de durazno</h5>
+                    <p class="card-text">Rico pastel tipo cheescake, la fruta es de su preferencia</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+
+            <div class="card mb-4">
+                <img src="./assets/tarta_nuez.jpg" class="card-img-top" alt="tarta de nuez">
+                <div class="card-body">
+                    <h5 class="card-title">Tarta de nuez</h5>
+                    <p class="card-text">Deliciosa tarta casera de nuez, tenemos tamaño mediano y grande.</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="card mb-4">
+                <img src="./assets/pan_muerto.jpg" class="card-img-top" alt="Pan de muerto">
+                <div class="card-body">
+                    <h5 class="card-title">Pan de muerto</h5>
+                    <p class="card-text">Rico pan de muerto, puedes pedir a partir de 3 piezas</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+
+            <div class="card mb-4">
+                <img src="./assets/gelatina_duarzno.jpg" class="card-img-top" alt="Gelatina de durazno">
+                <div class="card-body">
+                    <h5 class="card-title">Gelatina de durazno</h5>
+                    <p class="card-text">Deliciosa gelatina de yogurth sabor durazno, tenemos tamaño mediano y grande</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+
+            <div class="card mb-4">
+                <img src="./assets/hojaldre_espinaca.jpg" class="card-img-top" alt="hojaldre navideño">
+                <div class="card-body">
+                    <h5 class="card-title">Arbol de navidad de hojaldre</h5>
+                    <p class="card-text">hojaldre relleno de espinaca, especial de temporada navideña</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-3">
+
+            <div class="card mb-4">
+                <img src="./assets/galletas.jpg" class="card-img-top" alt="Galletas de chocolate">
+                <div class="card-body">
+                    <h5 class="card-title">Galletas de chocolate</h5>
+                    <p class="card-text">Ricas galletas de chocolate, puedes pedir a partir de 3 piezas</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+
+            <div class="card mb-4">
+                <img src="./assets/roles_de_muerto.jpg" class="card-img-top" alt="roles de muerto">
+                <div class="card-body">
+                    <h5 class="card-title">Roles de muerto</h5>
+                    <p class="card-text">Ricos roles de canela con pan de muerto en el tope</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+
+            <div class="card mb-4">
+                <img src="./assets/pastel_cajeta.jpg" class="card-img-top" alt="Pastel de cajeta">
+                <div class="card-body">
+                    <h5 class="card-title">Pastel de cajeta</h5>
+                    <p class="card-text">Delicioso pastel de cajeta, se encuentra relleno. Tenemos tamaño mediano y grande</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
+    </div>
+</div>
+
+        
+
+
+
+    </main>
+    <!-- footer -->
     <footer class=" text-white text-center py-3">
         © 2025 Reposteria MaDi — Todos los derechos reservados.
     </footer>
 
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 
 </body>
 
