--- a/carrito.html
+++ b/carrito.html
@@ -2,59 +2,119 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio</title>
-  <link rel="stylesheet" href="./css/main.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link rel="icon" href="./assets/maDi.jpg">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-    rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inicio</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="icon" href="./assets/maDi.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
 
 </head>
 
 <body id="bdy">
-  <header>
-  <nav class="navbar navbar-expand-lg ">
-    <div class="container-fluid">
-      <a class="navbar-brand navBarItem" href="./index.html">Pasteleria MaDi</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item navBarItem">
-            <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
-          </li>
-          <li class="nav-item navBarItem">
-            <a class="nav-link " href="./contacto.html">Contacto</a>
-          </li>
-          <li class="nav-item navBarItem">
-            <a class="nav-link" href="./carrito.html">Carrito</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  </header>
+    <header>
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid">
+                <a class="navbar-brand navBarItem" href="./index.html">Pasteleria MaDi</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item navBarItem">
+                            <a class="nav-link" aria-current="page" href="./productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item navBarItem">
+                            <a class="nav-link " href="./contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item navBarItem">
+                            <a class="nav-link" href="./carrito.html">Carrito</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="container my-5">
 
- <!-- footer -->
+        <div class="card shadow-lg border-0">
+            <div id="carritop" class="card-header  text-white">
+                <h4 class="mb-0">Tus productos</h4>
+            </div>
+
+            <div class="card-body">
+
+                <div class="row align-items-center mb-4">
+                    <div class="col-md-2">
+                        <img src="./assets/galletas.jpg" class="img-fluid rounded" alt="Producto 1">
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Galletas de chocolate</h5>
+                        <p class="text-muted mb-0">3 piezas</p>
+                    </div>
+                    <div class="col-md-2">
+                        <span class="fw-bold">$150</span>
+                    </div>
+                    <div class="col-md-2">
+                        <input type="number" value="1" min="1" class="form-control">
+                    </div>
+                    <div class="col-md-2 text-end">
+                        <button class="btn btn-danger btn-sm">Eliminar</button>
+                    </div>
+                </div>
+
+                <hr>
+
+                <div class="row align-items-center mb-4">
+                    <div class="col-md-2">
+                        <img src="./assets/pastel_cajeta.jpg" class="img-fluid rounded" alt="Producto 2">
+                    </div>
+                    <div class="col-md-4">
+                        <h5>Pastel de cajeta</h5>
+                        <p class="text-muted mb-0">Mediano</p>
+                    </div>
+                    <div class="col-md-2">
+                        <span class="fw-bold">$320</span>
+                    </div>
+                    <div class="col-md-2">
+                        <input type="number" value="2" min="1" class="form-control">
+                    </div>
+                    <div class="col-md-2 text-end">
+                        <button class="btn btn-danger btn-sm">Eliminar</button>
+                    </div>
+                </div>
+
+                <hr>
+
+                <div class="text-end">
+                    <h4>Total: <span class="fw-bold">$390</span></h4>
+                    <button class="btn btn-success btn-lg mt-3">Proceder al Pago</button>
+                </div>
+
+            </div>
+        </div>
+
+    </main>
+
+    <!-- footer -->
     <footer class=" text-white text-center py-3">
         © 2025 Reposteria MaDi — Todos los derechos reservados.
     </footer>
 
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 
 </body>
 
