--- a/contacto.html
+++ b/contacto.html
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item navBarItem">
-                            <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
+                            <a class="nav-link" aria-current="page" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item navBarItem">
                             <a class="nav-link " href="./contacto.html">Contacto</a>
@@ -48,8 +48,8 @@
         </nav>
     </header>
     <div class="container text-center my-5">
-        <h1 class="fw-bold">Contáctanos</h1>
-        <p class="text-muted">Estamos aquí para ayudarte con tus pedidos y dudas.</p>
+        <h1 >Contáctanos</h1>
+        <p>Estamos aquí para ayudarte con tus pedidos y dudas.</p>
     </div>
 
     <!-- FORMULARIO -->
@@ -86,7 +86,7 @@
                                     required></textarea>
                             </div>
 
-                            <button type="submit" class="btn btn-primary w-100">Enviar mensaje</button>
+                            <button id="btnForm" type="submit" class="btn  w-100">Enviar mensaje</button>
                         </form>
 
                     </div>
