--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg ">
       <div class="container-fluid">
         
-        <a class="navbar-brand navBarItem" href="./index.html">Pasteleria MaDi</a>
+        <a class="navbar-brand navBarItem " href="./index.html">Pasteleria MaDi</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item navBarItem">
-              <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
+              <a class="nav-link " aria-current="page" href="./productos.html">Productos</a>
             </li>
             <li class="nav-item navBarItem">
               <a class="nav-link " href="./contacto.html">Contacto</a>
@@ -66,17 +66,17 @@
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="./assets/empanadas.jpg" class="d-block mx-auto" alt="empanadas">
+        <img src="./assets/pan_muerto.jpg" class="d-block mx-auto" alt="empanadas">
         <div class="carousel-caption d-none d-md-block">
-          <h1 class="carrusel">Empanadas</h1>
-          <p>Rellenas de philadelphia</p>
+          <h1 class="carrusel">Pan de muerto</h1>
+          <p>¡Especial de temporada!</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./assets/pastel_cajeta.jpg" class="d-block mx-auto" alt="Pastel de cajeta">
+        <img src="./assets/roles_de_muerto.jpg" class="d-block mx-auto" alt="Pastel de cajeta">
         <div class="carousel-caption d-none d-md-block">
-          <h1 class="carrusel">Patel de cajeta</h1>
-          <p>Rico pastel de cajeta, esta relleno</p>
+          <h1 class="carrusel">Roles de muerto</h1>
+          <p>¡Especial de temporada!</p>
         </div>
       </div>
     </div>
@@ -105,7 +105,7 @@
             <h5 class="card-title">Galletas de chispas de chocolate</h5>
             <p class="card-text">Galletas con chispas de chocolate deliciosas</p>
             <p class="card-text">Llévate un paquete de 3 pzas</p>
-            <a href="./productos.html" class="btn btn-primary">Ver más</a>
+            <a href="./productos.html" class="btn btn-primary ">Ver más</a>
           </div>
         </div>
       </div>
