--- a/carrito.html
+++ b/carrito.html
@@ -108,7 +108,7 @@
     </main>
 
     <!-- footer -->
-    <footer class=" text-white text-center py-3">
+    <footer class="  text-center py-3">
         © 2025 Reposteria MaDi — Todos los derechos reservados.
     </footer>
 
