--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </div>
   </div>
   <!--footer-->
-  <footer class=" text-white text-center py-3">
+  <footer class="  text-center py-3">
     © 2025 Reposteria MaDi — Todos los derechos reservados.
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
